--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,23 @@
+@import url(https://db.onlinewebfonts.com/c/8bdf9153512e81954b0d2b7167eab648?family=EloquentJFRegularPro);
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --branco: #E6E4E0;       
+  --azulescuro: #081826;
+  --azulciano: #43D3E6;
+  --azulelegante: #0B536F;
+  --creme: #FFFCEA;
+  --ouro: #FCDA43;
+  --amarelo: #FFC66B;
+  --laranja: #F3B653;
+  --marrom: #804A28;
+  --preto: #000000;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: var(--preto);
+  background: var(--azulescuro);
 }
