Adicionado Header e Footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url(https://db.onlinewebfonts.com/c/8bdf9153512e81954b0d2b7167eab648?family=EloquentJFRegularPro);
+@import url(https://db.onlinewebfonts.com/c/0033a2fbc0329740fb86c1cfd134cb94?family=Roboto);
 
 @tailwind base;
 @tailwind components;
