--- a/src/app/components/Organizadores/Organizadores.css
+++ b/src/app/components/Organizadores/Organizadores.css
@@ -67,7 +67,7 @@ h1 {
 }
 
 .nome {
-	width: 180px;
+	width: 200px;
 	height: 44px;
 	flex-shrink: 0;
 
@@ -123,4 +123,21 @@ h1 {
   width: 70px;
   height: 70px;
   z-index: 2;
+}
+
+.coluna-organizador{
+	display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+img{
+	max-width: none !important;
+}
+
+@media (max-width: 600px) {
+	h1{
+		font-size: 12vw;
+	}
 }
