--- a/src/app/components/Organizadores/Organizadores.css
+++ b/src/app/components/Organizadores/Organizadores.css
@@ -18,6 +18,7 @@ h1 {
 }
 
 .titulo {
+	margin-bottom: 40px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -130,6 +131,8 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+	max-width: 1300px;
+	margin: auto;
 }
 
 img{
