--- a/src/app/components/Organizadores/Organizadores.css
+++ b/src/app/components/Organizadores/Organizadores.css
@@ -60,10 +60,9 @@ h1 {
 
 .foto {
 	width: 180px;
-  height: 180px;
-
+  	height: 180px;
+	object-fit: cover;
 	border-radius: 200px;
-
 	background-color: #D9D9D9;
 }
 
