--- a/src/components/Organizadores/Organizadores.css
+++ b/src/components/Organizadores/Organizadores.css
@@ -4,11 +4,11 @@ body {
   background-color: #081826;
 }
 
-h1 {
-  text-shadow: 0 4px 20px rgba(255, 252, 234, 0.40);
+.titulobrilhante {
+  text-shadow: 0 4px 20px rgba(255, 252, 234, 0.3);
   font-family: 'Elephant';
-  font-size: 72px;
-  font-style: normal;
+  /* font-size: 4rem; */
+  /* font-style: normal; */
   font-weight: 400;
   line-height: normal;
   background: linear-gradient(180deg, var(--amarelo-bx, #FFC66B) 56.25%, var(--marrom-bx, #804A28) 100%);
@@ -27,7 +27,7 @@ h1 {
 
 .borda-tracejada {
 	width: 225px;
-  height: 225px;
+  	height: 225px;
 
 	border: dashed;
 	border-radius: 200px;
